<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tranthuong.hostapp.fragments.SettingsFragment"
    android:background="@color/settings_bg_color">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/show_me_section_title"
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/men_title"
                android:id="@+id/textView5"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/settingMenImg_id"
                android:layout_marginRight="20dp"
                android:src="@drawable/unselected_profile"
                android:focusableInTouchMode="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/women_title"
                android:id="@+id/textView6"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/settingWomenImg_id"
                android:layout_marginRight="20dp"
                android:src="@drawable/unselected_profile" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/show_age_title"
            android:id="@+id/textView7"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/min_age_title"
                android:id="@+id/textView88"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/minimunAgeTv_id"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="2dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/max_age_title"
                android:id="@+id/textView8"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/maximunAgeTv_id"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/show_in_rayon_title"
            android:id="@+id/textView9"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" >

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rayonDistanceSb_id"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:splitTrack="false"
                android:max="200" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/rayonDistanceTv_id"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/settings_text_unit_color"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rayon_unit_title"
                android:id="@+id/textView10"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:textColor="@color/settings_text_unit_color"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
