<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidemenu_layout"
    android:visibility="visible"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:background="@color/slide_menu_bg" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/slidemenu_home"
                android:id="@+id/homeItem"
                android:textColor="@android:color/white"
                android:onClick="onMenuItemClick"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/slidemenu_separator" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/slidemenu_profile"
                android:id="@+id/profileItem"
                android:textColor="@android:color/white"
                android:onClick="onMenuItemClick"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/slidemenu_separator" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/slidemenu_settings"
                android:id="@+id/settingsItem"
                android:textColor="@android:color/white"
                android:onClick="onMenuItemClick"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>