<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tranthuong.hostapp.fragments.ProfileFragment"
    android:background="@android:color/white">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/profile_horizontal_separator"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView"
                android:src="@drawable/profileicon"
                android:layout_marginRight="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/profile_fistname_title"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/profile_text_color"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/profileFirstnameTv_id"
                android:layout_gravity="center_vertical"
                android:textColor="@color/profile_text_color"
                android:layout_marginRight="20dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/profile_horizontal_separator"
            android:layout_marginLeft="65dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView2"
                android:src="@drawable/icon_calender"
                android:layout_marginRight="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/profile_age_title"
                android:id="@+id/textView2"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/profile_text_color"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/profileAgeTv_id"
                android:layout_gravity="center_vertical"
                android:textColor="@color/profile_text_color"
                android:layout_marginRight="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/photo_title"
            android:id="@+id/textView3"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/profileImg_1_id"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/profileImg_2_id"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/profileImg_3_id"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
